mvc, GET handler finished
